Source/WebCore/platform/graphics/blackberry/LayerRenderer.cpp
@@ -595,8 +595,18 @@ void LayerRenderer::drawDebugBorder(LayerCompositingThread* layer)
     } else
         glDisable(GL_BLEND);
 
+    // If we're rendering to a surface, don't include debug border inside the surface.
+    if (m_currentLayerRendererSurface)
+        return;
+
+    FloatQuad transformedBounds;
+    if (layerAlreadyOnSurface(layer))
+        transformedBounds = layer->layerRendererSurface()->transformedBounds();
+    else
+        transformedBounds = layer->getTransformedBounds();
+
     const GLES2Program& program = useProgram(ColorProgram);
-    glVertexAttribPointer(program.positionLocation(), 2, GL_FLOAT, GL_FALSE, 0, &layer->getTransformedBounds());
+    glVertexAttribPointer(program.positionLocation(), 2, GL_FLOAT, GL_FALSE, 0, &transformedBounds);
     glUniform4f(m_colorColorLocation, borderColor.red() / 255.0, borderColor.green() / 255.0, borderColor.blue() / 255.0, 1);
 
     glLineWidth(std::max(1.0f, layer->borderWidth()));
